# sector7

./: Makefile.am  TODO  acinclude.m4  configure.ac  configure.in
design_doc/: how_to_write_server.txt  net_proto_thoughts.txt  thoughts.txt
libs/: Makefile.am
libs/glpng/: Makefile.am  adler32.c  crc32.c  glpng.c  zconf.h  zutil.c  zutil.h
src/: Makefile.am  area.cpp  area.hpp  asteroid.hpp  b_minerbotevent.cpp  b_minerbotevent.hpp  camera.cpp  camera.hpp  console.cpp  console.hpp  engine.hpp  ent_squad.hpp  entity.cpp  entity.hpp  entitymgr.cpp  entitymgr.hpp  event.cpp  event.hpp  game.cpp  game.hpp  globals.hpp  level.cpp  level.hpp  map_defines.hpp  ncu.cpp  ncu.hpp  netclient.cpp  netclient.hpp  netpacket.cpp  netpacket.hpp  netserver.cpp  netserver.hpp  netserverclient.cpp  netserverclient.hpp  p_plasma.hpp  particles.cpp  particles.hpp  physics.cpp  player.cpp  player.hpp  (+48 more)
src/engine/: Makefile.am  area.cpp  area.hpp  asteroid.cpp  asteroid.hpp  camera.cpp  camera.hpp  console.hpp  engine.hpp  entity.cpp  entity.hpp  entity.i  entitymgr.cpp  entitymgr.hpp  globals.hpp  map_defines.hpp  netclient.cpp  netclient.hpp  netpacket.hpp  netserver.cpp  netserver.hpp  netserverclient.cpp  netserverclient.hpp  p_plasma.cpp  p_plasma.hpp  particles.cpp  particles.hpp  physics.hpp  projectile.cpp  projectile.hpp  radar.cpp  radar.hpp  renderer.cpp  renderer.hpp  scoreboard.cpp  scoreboard.hpp  sector.cpp  sector.hpp  texture.cpp  texture.hpp  (+12 more)
