noinst_LTLIBRARIES = libglpng.la
libglpng_la_SOURCES = adler32.c   infblock.h  inffast.h   inftrees.h  png.h       pngmem.c    pngrtran.c  zconf.h crc32.c     infcodes.c  inffixed.h  infutil.c   pngconf.h   pngpread.c  pngrutil.c  zlib.h glpng.c     infcodes.h  inflate.c   infutil.h   pngerror.c  pngread.c   pngset.c    zutil.c infblock.c  inffast.c   inftrees.c  png.c       pngget.c    pngrio.c    pngtrans.c  zutil.h glpng.h

AM_CFLAGS = @GL_CFLAGS@ @SDL_CFLAGS@

LIBFLAGS = @GL_LDFLAGS@
